Commented out the bugs we haven't fixed yet